--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,9 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
+# Linting tools
+ruff.toml
+
 # Unit test / coverage reports
 htmlcov/
 .tox/
